// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header Snapshot Testing Test With Searchbar 1`] = `
Array [
  <header
    className="header"
  >
    <nav>
      <div
        className="title"
        data-testid="title"
      >
        <form
          className="searchbar"
          data-testid="searchbar"
        >
          <span
            className="material-icons icon"
          >
            search
          </span>
          <input
            id="search-input"
            onChange={[Function]}
            placeholder="Search"
            type="text"
            value=""
          />
          <div
            className="buttons"
          >
            <span
              className="material-icons icon"
            >
              clear
            </span>
          </div>
        </form>
      </div>
      <a
        href="/"
        onClick={[Function]}
      >
        <span
          className="material-icons home-icon"
        >
          home
        </span>
      </a>
    </nav>
  </header>,
  <div
    className="push-down"
  />,
]
`;

exports[`Header Snapshot Testing Test With Searchbar and title 1`] = `
Array [
  <header
    className="header"
  >
    <nav>
      <div
        className="title"
        data-testid="title"
      >
        <form
          className="searchbar"
          data-testid="searchbar"
        >
          <span
            className="material-icons icon"
          >
            search
          </span>
          <input
            id="search-input"
            onChange={[Function]}
            placeholder="Search"
            type="text"
            value=""
          />
          <div
            className="buttons"
          >
            <span
              className="material-icons icon"
            >
              clear
            </span>
          </div>
        </form>
      </div>
      <a
        href="/"
        onClick={[Function]}
      >
        <span
          className="material-icons home-icon"
        >
          home
        </span>
      </a>
    </nav>
  </header>,
  <div
    className="push-down"
  />,
]
`;

exports[`Header Snapshot Testing Test With Title 1`] = `
Array [
  <header
    className="header"
  >
    <nav>
      <div
        className="title"
        data-testid="title"
      >
        <h4>
          Sample Title
        </h4>
      </div>
      <a
        href="/"
        onClick={[Function]}
      >
        <span
          className="material-icons home-icon"
        >
          home
        </span>
      </a>
    </nav>
  </header>,
  <div
    className="push-down"
  />,
]
`;
